# PSMFLows

./: .gitignore  LICENSE  Makefile  README.md  base_model.py  expected_results.md  main.py  nn_models.py  normalizers.py  pyproject.toml  requirements-jax.txt  requirements.txt  resume.py  run_gciql.py  train.py  utils.py
agents/: __init__.py  base.py  fql.py  psm.py
buffers/: transition.py
configs/: config.yaml  train.yaml
data/: ogbench.py
docs/: resuming_runs.md  rng_equivalence_findings.md
envs/: ogbench.py  rollout.py
evals/: _profile_core.py  analysis.py  dataset_support.py  factorization_probe.py  ogbench.py  paper_fragment.py  phase_probe.py  representation_profile.py  scene_calib.py  training_value.py
tests/: jax_subprocess.py  test_actor_goal.py  test_analysis.py  test_augmentator.py  test_crl_flowbc_configs.py  test_crl_flowbc_injection.py  test_crl_phase_probe.py  test_dataset_support.py  test_dict_buffer_horizon.py  test_drq_configs.py  test_drq_encoder.py  test_eval_context.py  test_eval_frame_stack.py  test_extract_ogbench_visual.py  test_factorization_probe.py  test_fb_gciql_curves.py  test_fb_pixel_curves.py  test_fb_reweight.py  test_fixed_b_model.py  test_fixed_b_state_dict.py  test_fixed_b_update.py  test_fixed_backward.py  test_flow_inversion.py  test_flow_psm_make_agent.py  test_flow_psm_scaffold.py  test_flow_steering.py  test_forwardmap_goal.py  test_frame_stack_buffer.py  test_gc_fb_defaults.py  test_gc_fb_e2e.py  test_gciql_profile.py  test_goal_cond_update.py  test_nn_models_vforward.py  test_ogbench_drq_augment.py  (+52 more)
(+200 files in other folders)
