[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "factored-fb"
version = "0.1.0"
description = "Forward-Backward representations for offline goal-conditioned RL on OGBench"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "numpy>=1.26",
    "ogbench>=1.1.2",
    "gymnasium>=0.29",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "pydantic>=2.0",
    "safetensors>=0.4.4",
    "h5py>=3.11.0",
    "wandb>=0.22.3",
    "tqdm",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "buffers*", "data*", "envs*", "evals*"]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.4",
    "pytest>=8.0",
    "pre-commit>=3.7",
]
slurm = [
    "hydra-submitit-launcher>=1.2",
]

[tool.black]
line-length = 100
target-version = ["py311"]
# Exclude generated/vendored files
exclude = '''
/(
    \.git
  | \.venv
  | outputs
  | multirun
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"